<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lexis Meeting</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="search_for_conferences">Search for Conferences...</string>
    <string name="featured_conferences">Featured Conferences</string>
    <string name="conferences">Conferences</string>
    <string name="registration">Registration</string>
    <string name="check_in">Check-In</string>
    <string name="schedule">Schedule</string>
    <string name="networking">Networking</string>
    <string name="session_recording">Session Recording</string>
    <string name="research_papers">Research Papers</string>
    <string name="feedback">Feedback</string>
    <string name="chat">Chat</string>
    <string name="others">Other Info</string>
    <string name="hotel">Hotel</string>
    <string name="travel">Travel</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="dining">Dining</string>
    <string name="enter_first_name">Enter First Name*</string>
    <string name="enter_last_name">Enter Last Name*</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_email">Enter Email*</string>
    <string name="enter_phone_number">Enter Phone Number*</string>
    <string name="enter_address">Enter Address</string>
    <string name="step_2_3">Step 2/3</string>
    <string name="if_billing_information_same_please_click_here">If Billing Information is also same then Please Check Here.</string>
    <string name="choose_your_currency">Choose Your Currency</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="submit">submit</string>
    <string name="your_total_payment">Your Total Payment</string>
    <string name="register">Register</string>
    <string name="code">Code</string>
    <string name="enter_name">Enter Name*</string>
    <string name="submit_abstract">Submit Abstract</string>
    <string name="download_brochure">Download Brochure</string>
    <string name="enter_company_university">Enter Company/University</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an Account Sign in Here…!</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_signup_here">Don\'t have an Account SignUp here…!</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="enter_your_feedback">Enter Your Feedback...!</string>
    <string name="sessions_tracks">Sessions/Tracks</string>
    <string name="usa_americas">General Queries:</string>
    <string-array name="title">

        <item>Select Title</item>
        <item value="Mr">Mr</item>
        <item value="Ms">Ms</item>
        <item value="Mrs">Mrs</item>
        <item value="Prof">Prof</item>
        <item value="Dr">Dr</item>
        <item value="Assist Prof Dr">Assist Prof Dr</item>
        <item value="Assoc Prof Dr">Assoc Prof Dr</item>

    </string-array>
    <string-array name="abstractCategory">

        <item>Select Category</item>
        <item value="Poster">Poster</item>
        <item value="Oral">Oral</item>
        <item value="Workshop">Workshop</item>
    </string-array>
    <string-array name="trackName">

        <item>Select Track Name</item>
        <item value="Food Chemistry">Food Chemistry</item>
        <item value="Food Microbiology">Food Microbiology</item>
        <item value="Food Analysis and Quality Assurance">Food Analysis and Quality Assurance</item>
        <item value="Diet and Cancer">Diet and Cancer</item>
        <item value="Fermentation">Fermentation</item>
        <item value="Food Drug Analysis">Food Drug Analysis</item>
        <item value="Food Nutrition and Health">Food Nutrition and Health</item>
        <item value="Food Science and Technology">Food Science and Technology</item>
        <item value="Food Processing and Preservation">Food Processing and Preservation</item>
        <item value="Diet in Obesity and Under Weight">Diet in Obesity and Under Weight</item>
        <item value="Importance of Food and Nutrition">Importance of Food and Nutrition</item>
        <item value="Microbial aspects of Food Quality and Spoilage">Microbial aspects of Food Quality and Spoilage</item>
        <item value="Food Safety, Security and Control">Food Safety, Security and Control</item>
        <item value="Enzymes in Food">Enzymes in Food</item>
        <item value="Human Health in Probiotics">Human Health in Probiotics</item>
        <item value="Food Toxicology">Food Toxicology</item>
        <item value="Industrial Biotechnology in Food Industries">Industrial Biotechnology in Food Industries</item>
        <item value="Food Bio Actives">Food Bio Actives</item>
        <item value="Food Science and Food Business">Food Science and Food Business</item>
        <item value="Biocatalyst and Agriculture biotechnology">Biocatalyst and Agriculture biotechnology</item>
        <item value="Current Research in Nutrition and Dietetics">Current Research in Nutrition and Dietetics</item>
        <item value="Management of Food Waste">Management of Food Waste</item>
        <item value="Nutrition and Health">Nutrition and Health</item>
        <item value="Food Additives">Food Additives</item>
        <item value="Food Biochemistry">Food Biochemistry</item>
        <item value="Brewing Technology">Brewing Technology</item>
        <item value="Food Engineering">Food Engineering</item>
        <item value=" Food-Borne Diseases"> Food-Borne Diseases</item>

        <item value="Others">Others</item>


    </string-array>
    <string-array name="category">
        <item value="Academic">Academic</item>
        <item value="Business">Industry/Business</item>
        <item value="Student">Student</item>
        <item value="ePoster">ePoster</item>
        <item value="Webinar">Webinar</item>
    </string-array>
    <string name="registrations_list">Registrations List</string>
    <string name="belgium">Belgium</string>
</resources>