<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_registrations"
            android:icon="@drawable/ic_baseline_how_to_reg_24"
            android:title="@string/registrations_list" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about_us"
            android:icon="@drawable/ic_info_black_24dp"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/contact_us" />


        </group>




</menu>
